<?xml version="1.0" encoding="utf-8"?>
<!--
    Top toolbar menu for LimboGtkActivity. Mirrors the SDL runtime menu
    (sdlactivitymenu.xml) minus the entries that only make sense for the
    SDL display backend (mouse modes, refresh rate, key mapper, etc.).
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemKeyboard"
        android:icon="@drawable/keyboard"
        android:title="@string/showkbd_label" />

    <item
        android:id="@+id/itemDrives"
        android:icon="@drawable/drives"
        android:title="@string/drives" />

    <item
        android:id="@+id/itemVolume"
        android:icon="@drawable/audiocard"
        android:title="@string/volume" />

    <item
        android:id="@+id/itemHideToolbar"
        android:icon="@drawable/pan"
        android:title="@string/hide_toolbar" />

    <item
        android:id="@+id/itemSaveState"
        android:icon="@drawable/pause"
        android:title="@string/save_state" />

    <item
        android:id="@+id/itemReset"
        android:icon="@drawable/reset"
        android:title="@string/reset" />

    <item
        android:id="@+id/itemShutdown"
        android:icon="@drawable/shutdown"
        android:title="@string/shutdown" />

    <item
        android:id="@+id/itemDisconnet"
        android:icon="@drawable/disconnect"
        android:title="@string/disconnect" />

    <item
        android:id="@+id/itemViewLog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/view_log" />

    <item
        android:id="@+id/itemHelp"
        android:icon="@drawable/help"
        android:title="@string/help" />

</menu>
