<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controls_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_lg"
    android:gravity="center"
    android:orientation="horizontal"
    tools:showIn="@layout/limbo_main">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startvm"
        style="@style/Widget.Limbo.ControlButton"
        android:layout_width="@dimen/control_button_size"
        android:layout_height="@dimen/control_button_size"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:contentDescription="@string/button_start"
        app:icon="@drawable/play"
        app:iconTint="?attr/colorOnPrimary"
        app:backgroundTint="#4CAF50" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pausevm"
        style="@style/Widget.Limbo.ControlButton"
        android:layout_width="@dimen/control_button_size"
        android:layout_height="@dimen/control_button_size"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:contentDescription="@string/button_pause"
        app:icon="@drawable/pause"
        app:iconTint="?attr/colorOnPrimary"
        app:backgroundTint="#FF9800" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/stopvm"
        style="@style/Widget.Limbo.ControlButton"
        android:layout_width="@dimen/control_button_size"
        android:layout_height="@dimen/control_button_size"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:contentDescription="@string/button_stop"
        app:icon="@drawable/stop"
        app:iconTint="?attr/colorOnPrimary"
        app:backgroundTint="#F44336" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restartvm"
        style="@style/Widget.Limbo.ControlButton"
        android:layout_width="@dimen/control_button_size"
        android:layout_height="@dimen/control_button_size"
        android:contentDescription="@string/button_restart"
        app:icon="@drawable/reset"
        app:iconTint="?attr/colorOnPrimary"
        app:backgroundTint="#2196F3" />

</LinearLayout>
